// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <h1>
    Sign up now
  </h1>
  <div
    className="section"
  >
    <div
      className="row"
    >
      <Field
        className="input"
        component={[Function]}
        name="email"
        placeholder="Email"
        type="email"
      />
    </div>
    <div
      className="row"
    >
      <Field
        className="input"
        component={[Function]}
        name="password"
        placeholder="Password"
        type="password"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </div>
    <div
      className="row"
    >
      <Field
        className="input"
        component={[Function]}
        name="repeatPassword"
        placeholder="Repeat password"
        type="password"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </div>
  </div>
  <div
    className="section"
  >
    <div
      className="row"
    >
      <button
        className="button fullwidth"
        type="submit"
      >
        Sign up
      </button>
    </div>
    <Link
      className="vanilla"
      replace={false}
      to="/login"
    >
      Do you already have an account?
    </Link>
  </div>
</form>
`;

exports[`It renders error message correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="authError"
  >
    Error message
  </div>
  <h1>
    Sign up now
  </h1>
  <div
    className="section"
  >
    <div
      className="row"
    >
      <Field
        className="input"
        component={[Function]}
        name="email"
        placeholder="Email"
        type="email"
      />
    </div>
    <div
      className="row"
    >
      <Field
        className="input"
        component={[Function]}
        name="password"
        placeholder="Password"
        type="password"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </div>
    <div
      className="row"
    >
      <Field
        className="input"
        component={[Function]}
        name="repeatPassword"
        placeholder="Repeat password"
        type="password"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </div>
  </div>
  <div
    className="section"
  >
    <div
      className="row"
    >
      <button
        className="button fullwidth"
        type="submit"
      >
        Sign up
      </button>
    </div>
    <Link
      className="vanilla"
      replace={false}
      to="/login"
    >
      Do you already have an account?
    </Link>
  </div>
</form>
`;
